--- a/src/main/resources/templates/layouts/main_layout.html
+++ b/src/main/resources/templates/layouts/main_layout.html
@@ -7,6 +7,7 @@
 <meta charset="UTF-8">
 <title>동물 병원 종합 정보 서비스 Reeflo</title>
 <link th:href="@{/bootstrap/bootstrap.min.css}" rel="stylesheet" >
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
 <link th:href="@{/css/header.css}" rel="stylesheet" />
 <script th:src="@{/js/jquery-3.7.1.min.js}"></script>
 <style>
