--- a/src/main/resources/templates/views/board/boardDetail.html
+++ b/src/main/resources/templates/views/board/boardDetail.html
@@ -161,6 +161,7 @@
 				<div class="row my-3 d-none" id="replyForm">
 					<div class="col">
 						<form name="replyWriteForm" id="replyWriteForm">
+						<!-- 고쳐야됨  -->
 						<input type="hidden" id="loginUser" name="loginUser" th:value="${session.loginUser}" />
 						<input type="hidden" id="boardId" name="boardId" th:value="${board.boardId}" />
 						<div class="row bg-light my-3 p-3 border">
