--- a/src/main/resources/templates/views/board/boardDetail.html
+++ b/src/main/resources/templates/views/board/boardDetail.html
@@ -147,7 +147,7 @@
 						<span class="recommend" th:text="|(${board.recommend})|">(10)</span>
 					</span>&nbsp;  |   &nbsp;
 					<span id="thank" class="btnCommend text-dark" style="cursor: pointer;">
-						<i class="bi bi-heart-fill" alt="땡큐"> 땡큐 </i>
+						<i class="bi bi-heart-fill" alt="좋아요"> 좋아요 </i>
 						<span class="recommend" th:text="|(${board.thank})|">(10)</span>
 					</span>&nbsp;  | &nbsp;
 					<span id="replyWrite" class="text-dark"
