--- a/src/main/resources/templates/views/board/board.html
+++ b/src/main/resources/templates/views/board/board.html
@@ -55,7 +55,7 @@
 					class="row justify-content-center">
         		<input type="hidden" name="category" th:value="${category}" />
 					<div class="col-auto">
-						<input type="text" name="hashtag" id="hashtag" class="form-control" style="width:500px;"placeholder="해시태그로 입력해주세요"/>
+						<input type="text" name="hashtag" id="hashtag" class="form-control" style="width:500px;"placeholder="찾으시는 반려동물의 종을 입력해주세요"/>
 					</div>
 					<div class="col-auto">
 						<input type="submit" value="검 색" class="btn btn-outline-success"/>
